# taxpilot

./: .dockerignore  .gitignore  .goreleaser.yaml  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  go.mod  go.sum  todo.md
api/: Cargo.toml
api/src/: main.rs  tests.rs
api/src/db/: mod.rs  schema.sql
api/src/domain/: builders.rs  field.rs  form.rs  mod.rs  registry.rs  solver.rs  taxmath.rs  wildcard.rs
api/src/efile/: ca.rs  mef.rs  mod.rs  reasonableness.rs  validate.rs
api/src/forms/: mod.rs
api/src/forms/federal/: f1040.rs  form_1116.rs  form_2555.rs  form_8833.rs  form_8889.rs  form_8938.rs  form_8949.rs  form_8995.rs  mod.rs  schedule_1.rs  schedule_2.rs  schedule_3.rs  schedule_a.rs  schedule_b.rs  schedule_c.rs  schedule_d.rs  schedule_se.rs
api/src/forms/inputs/: f1099_b.rs  f1099_div.rs  f1099_int.rs  f1099_nec.rs  mod.rs  w2.rs
api/src/forms/state/ca/: conformity.rs  f540.rs  form_3514.rs  form_3853.rs  mod.rs  schedule_ca.rs
api/src/llm/: mod.rs
api/src/pdf/: filler.rs  mappings.rs  mod.rs  parser.rs
api/src/routes/: efile.rs  explain.rs  fields.rs  forms_meta.rs  mod.rs  pdf.rs  returns.rs  rollforward.rs
cmd/taxpilot/: factory.go  factory_test.go  main.go
data/prompts/: ca_adjustments.txt  explainer_system.txt  (+1 more)
docs/: EXPAT_SUPPORT_PLAN.md  efile-provider-guide.md
scripts/: build-knowledge.sh  download-pdf-templates.sh  download-templates.sh  efile-setup.sh  extract-ftb-instructions.sh  extract-instructions.sh  fetch-ftb-forms.sh  fetch-irs-forms.sh
web/: Caddyfile  package.json  pnpm-lock.yaml  vite.config.ts
(+210 files in other folders)
